Downloads/DevOps-Interview-Questions-master/DevOps-Interview-Questions-master/10. Kubernetes/K8s_Notes/5. Security-LimitPrivilages/3. Network Policies/Allow All Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - {}  # Allow all


# Allows all ingress traffic to pods in app namespace (effectively disabling isolation for ingress).
